kubernetes/apps/metrics/loki/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki
spec:
  replicas: 1
  selector:
  template:
    spec:
      containers:
        - name: loki
          image: loki/loki:2.6.0
          ports:
            - containerPort: 3100
              protocol: TCP
              name: http
          args:
            - "-config.file=/etc/loki/config.yml"
          volumeMounts:
            - name: config
              mountPath: /etc/loki
      volumes:
        - name: config
          configMap:
            name: loki-config
