kubernetes/apps/metrics/loki/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki
spec:
  internalTrafficPolicy: Local
  ports:
    - name: http
      port: 3100
